# random_person_api

./: .gitignore  README.md  TODO.md  constant.py  default.py  example.db  file.json  make_request_call.py  out.json  pyproject.toml  random_person_api.py  requirements.txt  setup.py  ty.py
random_person_api/: DBOperations.py  Person.py  PersonSchema.py  PersonWithGender.py  PersonWithNationality.py  PrintOption.py  SessionManager.py  constant.py  default.py  entry_point.py  person_with_gender.py  person_with_nationality.py  print_option.py  random_person_api.py  resources.py  setup.py
random_person_api/constants/: constant.py
random_person_api/models/: Person.py  PersonWithGender.py  PersonWithNationality.py
random_person_api/persistence/: DBOperations.py  PersonSchema.py  SessionManager.py
random_person_api/random_person_api.egg-info/: PKG-INFO
random_person_api/schemas/: PersonSchema.py
